# comp_astro_24

./: .gitignore  README.md  assignment1_taskB.txt  assignment1_taskE.txt  pyproject.toml  taskC_ManuelaLeguizamon.txt  taskC_francescoa97outlook.txt
Data/: WASP107b.yaml
Data/assignment1/: WASP107b.yaml
Results_assignments/assignment1/: taskC_leonardodalcin00.txt
Results_assignments/assignment2/: report_injected_assignment2_taskG.txt  report_injection_assignment2_taskE.txt  report_no_injection_assignment2_taskD.txt  report_no_injection_assignment2_taskF.txt
Results_assignments/assignment3/: [WASP107b]_[A_warm_Neptune_s_methane_reveals_core_mass_and_vigorous_atmospheric_mixing]_report_assignment3_TaskB.txt  [WASP107b]_assignment3_taskA_parameters.txt  [WASP107b_Sing24]_[A_warm_Neptune_s_methane_reveals_core_mass_and_vigorous_atmospheric_mixing]_report_assignment3_TaskB.txt  [WASP107b_Sing]_[A_warm_Neptune_s_methane_reveals_core_mass_and_vigorous_atmospheric_mixing]_report_assignment3_TaskB.txt  [WASP107b_Synthetic]_assignment3_taskA_parameters.txt  [WASP107b_Taurex]_assignment3_taskA_parameters.txt  [WASP107b_Welbanks24]_[A_high_internal_heat_flux_and_large_core_in_a_warm_Neptune_exoplanet]_report_assignment3_TaskB.txt  [WASP107b_Welbanks]_[A_high_internal_heat_flux_and_large_core_in_a_warm_Neptune_exoplanet]_report_assignment3_TaskB.txt  (+3 more)
docs/: conf.py  modules.rst  pyELIJAH.atmosphere.atmosphere.rst  pyELIJAH.atmosphere.retrieval.rst  pyELIJAH.atmosphere.rst  pyELIJAH.detection.machine_learning.rst  pyELIJAH.detection.transit.rst  pyELIJAH.dream.rst  pyELIJAH.rst
(+81 files in other folders)
